--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,10 +30,11 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/getIP"
         android:layout_width="77dp"
         android:layout_height="40dp"
         android:layout_marginTop="52dp"
+        android:onClick="getPublicIP"
         android:text="Get"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.681"
@@ -41,10 +42,11 @@
         app:layout_constraintTop_toBottomOf="@+id/editTextPvtIP" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/getIpDet"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
+        android:onClick="getIPDetails"
         android:text="Get Details related to the IP"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -105,7 +107,7 @@
         android:ems="10"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button2" />
+        app:layout_constraintTop_toBottomOf="@+id/getIpDet" />
 
     <TextView
         android:id="@+id/textView6"
